CI-CD 자료/4-2. Jenkins/jenkins-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      serviceAccountName: jenkins
      containers:
      - name: jenkins
        image: ghcr.io/beyond-imagination/jenkins-docker-image:latest
        securityContext:
          privileged: true
        ports:
          - name: http-port
            containerPort: 8080
