CI-CD 자료/4-2. Jenkins/jenkins-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
spec:
  ingressClassName: public
  rules:
  - host: "jenkins.k8s.local"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: jenkins
            port:
              number: 8080
